--- a/OpenCode/CodeBrowser/CodeBrowser.html
+++ b/OpenCode/CodeBrowser/CodeBrowser.html
@@ -1,13 +1,18 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
+    <meta name="format-detection" content="telephone=no,email=no,date=no,address=no">
+    <title>代码浏览器</title>
+    <link rel="stylesheet" href="CodeBrowser.css">
     <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.4.0/styles/default.min.css">
     <script src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.4.0/highlight.min.js"></script>
 </head>
 <body>
 <div id="wrap">
-    <pre><code id="mainCode">loading...</code></pre>
+    <img src="CodeLoading.gif">
+    <p>数据加载中</p>
 </div>
 <script type='text/javascript' src="CodeLoader.js"></script>
 </body>
